backend/docker/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 550 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]

              routes:

              - match: { prefix: "/api.user" }
                route:
                  cluster: user
                  max_grpc_timeout: 0s

              - match: { prefix: "/api.chat" }
                route:
                  cluster: chat
                  max_grpc_timeout: 0s

              cors:
                allow_origin:
                - "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive, user-agent, cache-control, content-type, content-transfer-encoding, Authorization, x-ip, x-accept-content-transfer-encoding, x-accept-response-streaming, x-user-agent, x-grpc-web, grpc-timeout
                max_age: "1728000"
                expose_headers: grpc-status,grpc-message
                enabled: true

          http_filters:
          - name: envoy.cors
          - name: envoy.grpc_web
          - name: envoy.router

  clusters:

  - name: user
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: user, port_value: 550 }}]

  - name: chat
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: chat, port_value: 550 }}]
